[TTW-1] Add application icons, store logos and runtime icon support
  - Add AI-generated app icons (256, 150, 44, 16px) and store logos
  - Implement runtime window icon with AppWindow.SetIcon()
  - Add .ico file for taskbar icon display
  - Update asset references in .csproj
  - Fix .gitignore (remove Assets/ and *.sln exclusions)
  - Update documentation (README_ASSETS, TODO, CLAUDE.md)
  - Add .sln file to repository

--- a/src/TaskTimerWidget/TaskTimerWidget.csproj
+++ b/src/TaskTimerWidget/TaskTimerWidget.csproj
@@ -26,6 +26,9 @@
 
         <!-- Packaging for Windows Store -->
         <WindowsPackageType>None</WindowsPackageType>
+
+        <!-- Application Icon for taskbar -->
+        <ApplicationIcon>app.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
@@ -53,6 +56,36 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+        <!-- Window Icon (.ico for taskbar) -->
+        <Content Include="app.ico">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+
+        <!-- App Icons and Store Assets -->
+        <Content Include="Assets\Square150x150Logo.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Assets\Square44x44Logo.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Assets\StoreLogo.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Assets\Wide310x150Logo.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Assets\LargeTile.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Assets\SmallTile.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Assets\SplashScreen.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
