[TTW-1] Fix MSIX packaging - switch to single-project MSIX approach
  - Removed deprecated Windows Application Packaging Project
  - Configured single-project MSIX in TaskTimerWidget.csproj:
    - WindowsPackageType=MSIX, EnableMsixTooling=true
    - AppxBundle=Always, RuntimeIdentifiers=win-x64
  - Added Properties/launchSettings.json with MsixPackage profile
  - Fixed Package.appxmanifest:
    - EntryPoint=Windows.FullTrustApplication (WinUI 3 desktop)
    - Added rescap:Capability runFullTrust
  - Fixed App.xaml.cs async initialization bugs
  - WACK test PASSED with warnings (acceptable for Store)
  - App successfully launches from installed MSIX package
  - Updated TODO.md with completed MSIX packaging steps
  - Added tmp/ and TaskTimerWidget.Package/ to .gitignore

  🚀 Ready for Microsoft Store submission

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,9 @@ PublishProfiles/
 *.appx
 *.appxbundle
 *.appxupload
+
+# Deprecated Packaging Project (removed - using single-project MSIX now)
+src/TaskTimerWidget.Package/
+
+# Temporary files and test artifacts
+tmp/
