[TTW-1] Revise Store submission files, improve localization, and finalize MSIX package for release
- Added `SUBMISSION_OPTIONS.md` for Microsoft Store certification details.
- Updated `STORE_LISTING.md`: enhanced descriptions (EN/TR), privacy details, and keywords.
- Adjusted `Package.appxmanifest`:
  - Added `MelihCelenk.TaskTimerWidget` as the identity name.
  - Updated dependencies and capability declarations.
- Improved handling of MSIX packaging:
  - Disabled Appx package signing, enabled symbol packages, and auto-generated temporary certificates.
- Created Turkish screenshot assets.
- Made final refinements for release readiness.

--- a/src/TaskTimerWidget/TaskTimerWidget.csproj
+++ b/src/TaskTimerWidget/TaskTimerWidget.csproj
@@ -27,8 +27,7 @@
         <!-- Single-Project MSIX Packaging -->
         <WindowsPackageType>MSIX</WindowsPackageType>
         <GenerateAppxPackageOnBuild>false</GenerateAppxPackageOnBuild>
-        <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
-        <PackageCertificateThumbprint>9EBB0C075BAF2E933930DE9897322B9F7966DEF8</PackageCertificateThumbprint>
+        <AppxPackageSigningEnabled>False</AppxPackageSigningEnabled>
         <AppxBundle>Always</AppxBundle>
         <AppxBundlePlatforms>x64</AppxBundlePlatforms>
         <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
@@ -39,9 +38,10 @@
         <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
         <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
         <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
-        <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
-        <GenerateTestArtifacts>True</GenerateTestArtifacts>
+        <AppxSymbolPackageEnabled>True</AppxSymbolPackageEnabled>
+        <GenerateTestArtifacts>False</GenerateTestArtifacts>
         <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
+        <GenerateTemporaryStoreCertificate>True</GenerateTemporaryStoreCertificate>
     </PropertyGroup>
 
     <ItemGroup>
