[TTW-20] Add Build & Publish Guide and update version to 1.1.0
- Added `BUILD_AND_PUBLISH_GUIDE.md` with detailed steps for creating and publishing the MSIX package to the Microsoft Store.
- Updated `TaskTimerWidget.csproj` version and informational version to 1.1.0.

--- a/src/TaskTimerWidget/TaskTimerWidget.csproj
+++ b/src/TaskTimerWidget/TaskTimerWidget.csproj
@@ -14,8 +14,8 @@
         <Authors>Development Team</Authors>
         <Product>Task Timer Widget</Product>
         <Description>A lightweight, minimal task timer widget for Windows 11</Description>
-        <Version>0.1.0</Version>
-        <InformationalVersion>0.1.0+build.local</InformationalVersion>
+        <Version>1.1.0</Version>
+        <InformationalVersion>1.1.0</InformationalVersion>
 
         <!-- Build Configuration -->
         <Nullable>enable</Nullable>
